Minor style changes in Portfolio section, some border misalignment fixed

--- a/source/stylesheets/_portfolio-panel-template1.scss
+++ b/source/stylesheets/_portfolio-panel-template1.scss
@@ -21,14 +21,14 @@
   .btn-array {
     border-left: solid 1px $lightgrey;
     border-right: solid 1px $lightgrey;
-
   }
+
   .portfolio-description {
     background-color: $white;
     border-left: solid 1px $lightgrey;
     border-right: solid 1px $lightgrey;
     border-bottom: solid 1px $lightgrey;
-
+    width: 100%;
   }
 
 }
